Finished most of Jim's corrections.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.49 2009/10/13 21:15:08 ith Exp $
+% $Id: dbi-intro.tex,v 1.50 2009/10/21 11:51:00 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.49 2009/10/13 21:15:08 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.50 2009/10/21 11:51:00 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -103,7 +103,7 @@ In Chapter \ref{ch:dbi} we will derive upper and lower
 limits on the amplitude of the tensor perturbations.  
 We will explore how these bounds may be relaxed in Chapter \ref{ch:multibrane} and discuss
 multi-brane 
-scenarios which permit observational tensor signals. 
+scenarios which permit observable tensor signals. 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -117,24 +117,21 @@ The desire to unify seemingly disparate theories has been a driving force in
 theoretical physics for more than a hundred years. This effort has produced 
 the Standard Model (SM) of particle physics which unifies three of the four
 fundamental forces in a robust theoretical framework. Since the realisation of
-the SM a clear goal of theoretical physics has been the unification of the
-final force, gravity, into this framework. String theory is one of the leading
+the SM, a clear goal of theoretical physics has been the unification of the
+fourth force---gravity---into this framework. String theory is one of the leading
 contenders for achieving this unification. 
 In this section we will introduce
 some of the string theory concepts that will be required later to understand DBI
 inflation.
 Many review articles and text books have been written about string theory and
-its application to cosmology, a short list of recent works includes
+its application to cosmology and a short list of recent works includes
 \cite{cline, Johnson2000, Baumann:2009ni,Kallosh:2007wm,
 Linde:2005dd,McAllister:2007bg}.
 
 
-In string theory the fundamental
-building blocks of the
-universe are vibrating bundles of energy. These ``strings'' constitute all matter and force
-particles in existence.
-There are two main
-types of strings, closed and open, distinguished by the fact that closed
+In string theory there are two main
+types of strings, referred to as closed and open. These are distinguished by the fact
+that closed
 strings form a continuous loop while open strings have two unconnected ends. 
 % The physics of their interactions dictates the physics of the SM which has
 % been
@@ -146,8 +143,6 @@ strings form a continuous loop while open strings have two unconnected ends.
 % different
 % string theories have been discovered. This might appear to be a significant
 % set-back in the attempt to find a single unifying theory. 
-
-
 There are several different string theories linked in pairs by a process
 called
 duality. Physical descriptions in one theory can be translated into a
@@ -155,9 +150,9 @@ dual description in the other. The dual version often exhibits properties that
 are useful for solving problems in the original setting.
 % These dualities have demonstrated the existence of an underlying theory of
 % which the individual string theories are only facets. 
-We will work in the subset of string theory which has proven
+We will work in the framework of the Type IIB theory since this has proven
 to be the most
-fruitful for generating models of cosmological inflation, Type IIB \cite{cline,
+fruitful for generating models of cosmological inflation \cite{cline,
 Linde:2005dd}. 
 % 
 % The most striking prediction of string theory is the existence of other
@@ -172,16 +167,17 @@ Linde:2005dd}.
 \label{sec:stringcos-dbiintro}
 % 
 Temperatures in the early universe were far in excess of those attainable by
-any earth-bound particle accelerator today. Hence a stringent test of any high
+any earth-bound particle accelerator today. Hence, a stringent test of any high
 energy
 theory is whether it predicts the same properties of the early universe that are
 now being observed in the CMB and elsewhere.
-For this reason any string theory description of the universe must include a
-consistent cosmological narrative. 
-
+% For this reason any string theory description of the universe must include a
+% consistent cosmological narrative. 
+% 
 In Chapter \ref{ch:introduction} inflation was put forward as the leading
-explanation of the early development of the universe. For string theory to be
-a consistent framework in the inflationary paradigm it must produce a period of
+scenario for the evolution of the early universe. For string theory to
+be
+a consistent framework for the inflationary paradigm, it must produce a period of
 inflationary expansion. Although inflation is usually described by SM scalar
 fields, there is no
 evidence yet for the existence of such fields in the SM. Higher
@@ -194,7 +190,7 @@ existence of inflaton fields.
 
 Cosmology can be used as a tool to constrain string theory. Much of the evidence
 of an
-era of string theory physics would be removed by a period of inflation but the
+era of string theory physics would be removed by a period of inflation, but the
 observational results of inflation itself could provide clues about the nature
 of such an era. 
 
@@ -217,16 +213,16 @@ signatures.
 % models.
 
 \subsection{Extra dimensions}
-String theory tells us that the one time and three spacial dimensions that we
-see
-around us are not the full extent of the space-time manifold. Instead
-we live in a 10 or
+String theory predicts that the one time and three spatial dimensions that
+constitute the observable universe do not represent the complete space-time manifold.
+Instead,
+our universe is a 10 or
 11 dimensional space-time and physical theories in 3+1 dimensions must
-compensate for the
-other 6 or 7 dimensions that are hidden from us. One of the challenges of string theory is how 
-to hide these extra dimensions in such a way as to maintain standard physical
-results in the usual
-ones. 
+therefore be able to explain why the 
+other 6 or 7 dimensions are unobservable. One of the challenges of string
+theory is how 
+to ``hide'' these extra dimensions in such a way as to 
+recover the standard four-dimensional cosmology at low energies.
 
 The early work of Kaluza and Klein (KK) in formulating higher dimensional 
 theories laid the groundwork for the current treatment of extra dimensions in
@@ -247,11 +243,11 @@ In ten dimensional type IIB theory the six extra dimensions are
 compactified into a Ricci flat Calabi-Yau (CY) manifold which can be described
 by three complex coordinates \cite{Yau1977}. 
 Because any Ricci flat metric can be
-rescaled into another Ricci flat metric, there is no unique solution for the
+rescaled onto another Ricci flat metric, there is no unique solution for the
 metric on the CY manifold. Instead a family of solutions exists with many free
 parameters. These parameters remain after the compactification, in
-analogy to the size of the extra dimension in KK compactification, and can vary
-dependent on position in the four-dimensional space-time. They appear as fields
+analogy to the size of the extra dimension in KK compactification, and can depend
+on position in the four-dimensional space-time. They appear as fields
 in the four-dimensional theory and are known as moduli. 
 These fields are not subject to any symmetry and so their individual values
 at different spacetime points can affect the physics at those points.
@@ -301,9 +297,9 @@ and the new tower of winding states:
 \end{equation}
 where the string parameter $\alpha'$ is related to the string mass scale by
 $\alpha'=1/m_s^2$.
-If $L$ is taken to infinity the $w\ne 0$ states become infinitely massive and
-only the $w=0$ state is left with a continuum of momentum values. Thus the
-uncompactified result is recovered. However if $L\rightarrow0$ the $j\ne 0$
+If $L$ is taken to infinity, the $w\ne 0$ states become infinitely massive and
+only the $w=0$ state is left with a continuum of momentum values. Thus, the
+uncompactified result is recovered. However, if $L\rightarrow0$, the $j\ne 0$
 states are now infinitely massive as in the standard KK picture. Unlike the
 standard case, there is now a continuum of winding states $w\ne 0$,
 again giving an
@@ -315,14 +311,13 @@ when $j$ and $w$ are exchanged given the transformation
 \begin{equation}
  L \rightarrow \wt{L} = \frac{\alpha'}{L}\,.
 \end{equation}
-Writing the equations of motion in terms of $\wt{L}$, having swapped $j$ and
+Writing the equations of motion in terms of $\wt{L}$, having interchanged $j$ and
 $w$,
 gives a new theory
 which is compactified on a circle of radius $\wt{L}$. This is known as the
 T-dual theory and the transformation is called T-duality
 \cite{Sakai1986,Kikkawa1984b}. The two
-theories,
-original and T-dual, are physically identical; T-duality is an exact symmetry
+theories are physically identical since T-duality is an exact symmetry
 of string theory for closed strings.
 
 % 
@@ -332,31 +327,33 @@ of string theory for closed strings.
 The dynamics of extended objects known as branes are particularly important for
 building inflationary models.
 As mentioned in Section~\ref{sec:tduality-dbiintro}, string
-theories are linked by T-duality. Fundamental parameters are translated by the
-duality including the size of the extra-dimensions, the string coupling and the
-coordinate solutions of the strings.
+theories are linked by T-duality. Fundamental parameters such as the size of the
+extra-dimensions, the string coupling and the
+coordinate solutions of the strings are related by such a symmetry.
 
 
 We introduced T-duality by explaining
 its effects on closed strings. But what happens when open strings are
 T-dualised? Open strings, as their name suggests, have two open ends and
-consequently cannot have a conserved winding number like $w$. Again suppose one
-of the $D$ dimensions is compactified. As $L\rightarrow0$ the non-zero momentum
-states get infinitely massive but in contrast to the closed case there is now
-no continuum of winding states. Thus the theory now lives in $D-1$ dimensions
+consequently cannot have a conserved winding number such as $w$. Suppose once more
+that one
+of the $D$ dimensions is compactified. As $L\rightarrow0$, the non-zero momentum
+states become infinitely massive, but in contrast to the closed case there is now
+no continuum of winding states. Thus, the theory now lives in $D-1$ dimensions
 similar to standard KK compactification \cite{Johnson2000}.
 
-There are still closed strings in this theory however, and these continue to
+There are still closed strings in this theory, however, and these continue to
 move in the full $D$ dimensions. The endpoints of the open strings now observe
 Dirichlet boundary conditions, taking fixed values in the compactified
-direction. This follows through if more than one coordinate is made periodic.
+direction. This also follows if more than one coordinate is made periodic.
 If $D-p-1$ spatial dimensions are compactified, for some $p$, then the ends of
 the open
 strings can still move freely in the other $p$ spatial dimensions on a $p+1$
-dimensional hypersurface called a Dirichlet or D$p$-brane. 
+dimensional hypersurface. This hypersurface is called called a Dirichlet brane or
+D$p$-brane. 
 % 
-In Type IIB theory with supersymmetric strings an extra condition means that
-only D$p$-branes with $p=1,3,5,7,9$ are stable \footnotemark.
+In Type IIB theory with supersymmetric strings an extra condition implies that
+only D$p$-branes with $p=1,3,5,7,9$ are stable\footnotemark.
 \footnotetext{There is also a $p=-1$ D-instanton in which the time direction
 along with all spatial directions is subject to Dirichlet boundary conditions
 \cite{Green1992,Green1988,Green1977}.}
@@ -372,7 +369,7 @@ tension given by \cite{Johnson2000}\footnote{$T_p$ here is $\tau_p$ in
 \end{equation}
 % 
 where $g_s$ is the string coupling and $m_s$ is the string mass scale.
-Their dynamics is governed by the action 
+The dynamics is governed by the action 
 % 
 \begin{equation}
 \label{eq:gendbiaction-dbiintro}
@@ -383,25 +380,27 @@ coordinates $\xi^a$ for $a=0,\ldots,p$. This is the general form of the DBI
 action which will be used later.
 
 
-At its most basic slow-roll inflation requires only a single scalar field with a
-sufficiently flat potential to satisfy the slow roll conditions outlined in
-Section \ref{sec:slowroll-intro}. D-branes are charged (with Ramond-Ramond
-charge) and we can consider a system of a D-brane and an anti-D-brane
-($\overline{\mathrm{D}}$). As the two branes attract each other the distance
-between them can be used as a decreasing scalar degree of freedom, the
-inflaton field. 
-When the branes collide they will annihilate each other and produce energy to
-reheat the universe \cite{brane1,brane2,brane3,brane7,Brodie:2003qv,brane9}. 
+In the simplest versions of slow-roll inflation, only a single scalar field
+with a
+sufficiently flat potential is required to satisfy the slow roll conditions outlined
+in
+Section \ref{sec:slowroll-intro}. Since D-branes are charged (with Ramond-Ramond
+charge), a D-brane and anti-D-brane
+($\overline{\mathrm{D}}$) separated by some distance will be attracted to each other.
+The separation distance
+can be identified as a scalar degree of freedom and under appropriate conditions
+could play the role of the inflaton
+field \cite{brane1,brane2,brane3,brane7,Brodie:2003qv,brane9}. 
 
-As described in Section \ref{sec:extradims} compactifying dimensions
-introduces scalar fields known as moduli. These massless fields must be
-accounted for in the dynamics unless some way is found to stabilise them by
-fixing their mass to be large.
+As described in Section \ref{sec:extradims}, compactifying dimensions
+introduces scalar fields known as moduli. These fields must be
+accounted for in the dynamics unless some way can be found to stabilise them by
+fixing their masses to be large.
 Initial efforts to induce inflation using D-branes ignored the issue of moduli
-stabilisation. Instead it was
-assumed that whatever stabilisation technique was used would have no discernable
+stabilisation. Instead, it was
+assumed that whatever stabilisation mechanism was used would have no discernable
 effect on the inflationary physics. Kachru \etal \cite{brane4} recognised that
-in fact the stabilisation will be important and must be taken into account.
+in fact stabilisation will be important and must be taken into account.
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \subsection{Warped throats}
@@ -410,20 +409,21 @@ in fact the stabilisation will be important and must be taken into account.
 The moduli must
 be stabilised so that they do not appear in the effective action as
 massless fields. This can be achieved by switching on background fluxes in the
-compactified space. These fluxes are equivalent to magnetic
+compactified space. These fluxes are analogous to magnetic
 fields in the higher dimensional space. By Gauss' theorem  the compact space
 will now have a quantized non-zero total charge.
-In the presence of fluxes a general form of metric with a warp factor is
-possible \cite{Baumann:2009ni}:
+In the presence of fluxes a general form for the ten dimensional metric is given by
+\cite{Baumann:2009ni}:
 \begin{equation}
 \label{eq:warpedmetric-dbiintro}
  \d s^2 = e^{2A(y)}\eta_{\mu\nu} \d x^\mu \d x^\nu + e^{-2A(y)} g_{mn}\d y^m
 \d y^n\,,
 \end{equation}
-where $A(y)$ varies across the compact dimensions $y^m$.
+where the function $A(y)$ varies across the compact dimensions $y^m$.
 Compactifications in which $A$ varies significantly with $y$ are called warped
-compactifications. These warped compactifications are qualitatively similar to
-the Randall-Sundrum picture \cite{Randall1999,Brummer2006}.
+compactifications and $e^{A(y)}$ is referred to as the warp factor. These warped
+compactifications are qualitatively similar to
+the Randall-Sundrum scenario \cite{Randall1999,Brummer2006}.
 
 
 Flux compactification of type IIB string theory to four dimensions 
@@ -495,14 +495,14 @@ conical singularity at the tip of the throat with an $S^3$ cap
 a constant value in this region.
 
 
-In this section we have looked at the concepts that will be
+In this section we have summarised the concepts that will be
 required to discuss DBI inflation. The compactified warped throat described
-here will provide the setting for this string theory implementation of
+here will provide the setting for this string theory realisation of
 inflation. In Section \ref{sec:stringcos-dbiintro} we outlined how cosmological
 observations can constrain the parameter space of string theories. In the next
 section we connect the geometry and physics of the string compactification with
-inflationary cosmology and establish the observational parameters which will be
-used to formulate these constraints. 
+inflationary cosmology and establish the observational parameters that will directly
+enable concrete constraints to be formulated. 
 
 % 
 % 
@@ -588,8 +588,9 @@ varying inflaton can be expressed in the form \cite{brane6}
 \end{eqnarray}
 % 
 
-In Section~\ref{sec:noncanoninfl} we introduced $c_s$ as the speed of sound of
-inflaton fluctuations. For $P$ in \eq{eq:Pdefn-dbiintro} we find from
+In Section~\ref{sec:noncanoninfl} we introduced the speed of sound of
+inflaton fluctuations, defined by \eq{eq:defcs-dbiintro}. For the kinetic function in
+\eq{eq:Pdefn-dbiintro}, we find from
 \eq{eq:defcs-dbiintro} that
 % 
 \begin{equation}
@@ -605,20 +606,22 @@ The motion of the brane is said to be relativistic when this bound is
 close to saturation.
  
 We now define the epoch that is directly 
-accessible to cosmological observations as observable inflation. 
+accessible to cosmological observations as ``observable inflation''. 
 We will assume that this phase 
 occurred when the brane was located within a 
-throat region. We denote the values of all parameters 
+throat region and moving towards the tip of the throat. 
+We denote the parameter values 
 evaluated during observable inflation by a subscript star
 $(~_*)$. Observable inflation corresponds to no more than about 4 e-foldings  
-of inflationary expansion, $\Delta \N_* \simeq 4$. 
-This occurred somewhere between 30 to 60 e-foldings before the
+of inflationary expansion, $\Delta \N_* \simeq 4$,
+and occurred somewhere between 30 to 60 e-foldings before the
 end of inflation. 
 
 
-The definitions of the slow roll parameters in Section~\ref{sec:slowroll-intro} 
-change when $c_s$ is not unity and we
-will include a third parameter $s$ which quantifies the rate of change of $c_s$.
+The definitions of the slow roll parameters defined in
+Section~\ref{sec:slowroll-intro} 
+change when $c_s$ is not equal to unity and we
+will include a third parameter, $s$, which quantifies the rate of change of $c_s$.
 The inflationary dynamics during this phase can  
 be quantified in terms of these three parameters: 
 % 
@@ -635,7 +638,7 @@ s \equiv \frac{\dot{c_s}}{c_sH}
 \end{eqnarray}
 % 
 where $\gamma \equiv 1/c_s$. 
-We will assume that the `slow-roll' conditions 
+We will assume that the quasi-de Sitter conditions 
 $\{ \varepsilon_H, |\eta_H | , |s | \}  \ll 1$ apply during observable inflation. 
 In this regime, the amplitudes and spectral indices of the two-point functions 
 for the scalar and tensor perturbations are given by \cite{gm}
@@ -681,17 +684,17 @@ When $c_s\PX=1$ the second term in
 \fnleq \simeq -\frac{1}{3} \left( \frac{1}{c_s^2} -1 \right) \,.
 \end{equation}
 % 
-When $c_s\ll1$ large amounts of non-Gaussianity are produced.
+When $c_s\ll1$ a significant level of non-Gaussianity is produced.
 
-For a homogeneous field $2X = \dot{\vp}^2$ so from \eq{eq:csdefn-dbiintro} we
-get
+For a homogeneous field $2X = \dot{\vp}^2$, so from \eq{eq:csdefn-dbiintro} we
+find that
 \begin{equation}
 \label{eq:phiT-dbiintro}
  \dot{\vp}^2 = T(\vp)(1-c_s^2)\,.
 \end{equation}
 Eqs. \eqref{eq:spectra-dbiintro},
 \eqref{eq:fnlcs-dbiintro} and \eqref{eq:phiT-dbiintro}
-may be combined to provide a relation for the warped brane tension: 
+may then be combined to provide a relation for the warped brane tension: 
 % 
 \begin{equation}
 \label{eq:obswarp-dbiintro}
@@ -700,13 +703,15 @@ may be combined to provide a relation for the warped brane tension:
 \end{equation}
 % 
 
-In this section we have introduced the standard DBI inflationary scenario. This
-is a particular example of the non-canonical inflationary models described in
-Section~\ref{sec:noncanoninfl}. In the case of DBI the speed of sound parameter
+To summarise thus far, in this section we have introduced the standard DBI
+inflationary scenario. This
+is a particular example of the non-canonical inflationary paradigm described in
+Section~\ref{sec:noncanoninfl}. In the case of DBI inflation the speed of sound
+parameter
 takes the simple form $c_s = 1/\PX$. The previously derived
-results for $\Pr$ and $n_s$ can then be written in terms of $c_s$ and the
-redefined slow-roll parameters in Eqs \eq{eq:epsdefn-dbiintro},
-\eq{eq:defeta-dbiintro}, \eq{eq:defs-dbiintro}. 
+results for $\Pr$ and $n_s$, as well as the redefined slow roll parameters 
+\eqref{eq:epsdefn-dbiintro}--\eqref{eq:defs-dbiintro} can then be expressed in terms
+of this parameter. 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -719,7 +724,7 @@ redefined slow-roll parameters in Eqs \eq{eq:epsdefn-dbiintro},
 
 Eqs. (\ref{eq:Ps-dbiintro}) and (\ref{eq:Ptdefn-intro}) imply 
 that the variation of the inflaton field during inflation  
-is related to the tensor-scalar amplitude by \cite{lyth,bmpaper}
+is related to the tensor-scalar ratio by \cite{lyth,bmpaper}
 % 
 \begin{equation}
 \label{eq:genlyth-dbiintro}
@@ -759,10 +764,10 @@ field is given approximately by \cite{lyth,bmpaper}
 \frac{(\Delta \N_*)^2}{8} \left( \frac{r}{c_sP_{,X}} \right)_* \,.
 \end{equation}
 % 
-This equality links the total variation of $\vp$ during observable inflation
+This equality links the total variation of the inflaton during observable inflation
 with the tensor-scalar ratio, \ie the amplitude of gravitational waves produced
-during that period. In Chapter~\ref{ch:dbi} we will see how the dynamics of the
-DBI scenario allow an upper limit to be put on $r$ using this relation.
+during that period. In Chapter~\ref{ch:dbi} we will show how the dynamics of the
+DBI scenario allow an upper limit to be imposed on $r$ using this relation.
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -777,11 +782,13 @@ Many attempts have been made to provide an inflationary expansion phase in the
 early universe using string theory. In compactifying from 10 dimensions to 4,
 complicated geometries and additional fluxes must be used to stabilise the
 remaining moduli fields. 
-The DBI scenario is an example of a non-canonical inflationary model. With a
-small sound speed significant amounts of non-Gaussianity can be produced. This
+The DBI scenario is an example of a non-canonical inflationary model. 
+Significant non-Gaussianity in the density perturbations spectrum can be generated
+due to the small sound speed of the inflaton fluctuations.
+This
 non-Gaussianity can be related to the brane tension and tensor-scalar ratio
 through \eq{eq:approxlyth-dbiintro}. In the next chapter we will derive two
-competing bounds on $r$ which will tightly constrain the parameter space for
+competing bounds on $r$ which will strongly constrain the parameter space for
 DBI models.
 
 % We will first consider the UV version of DBI inflation,
