Fixed issue with sound horizon.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.50 2009/10/21 11:51:00 ith Exp $
+% $Id: dbi-intro.tex,v 1.51 2009/10/21 14:49:17 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.50 2009/10/21 11:51:00 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.51 2009/10/21 14:49:17 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -656,8 +656,9 @@ for the scalar and tensor perturbations are given by \cite{gm}
  n_t = -2\varepsilon_H  \,,
 \end{eqnarray}
 % 
-respectively, where the quantities on the right-hand sides are evaluated 
-after the scale with comoving wavenumber $k$ crosses 
+respectively. $\Pt$ and $n_t$ are evaluated when $k=aH$ but $\Pr$ and $n_s$ are
+evaluated 
+when the scale with wavenumber $k$ crosses 
 the sound horizon $k c_s = aH$.  
 
 % \addtodo{WMAP5}
