Slightly changed sentence.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.51 2009/10/21 14:49:17 ith Exp $
+% $Id: dbi-intro.tex,v 1.52 2009/10/21 15:29:04 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.51 2009/10/21 14:49:17 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.52 2009/10/21 15:29:04 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -578,14 +578,14 @@ sourced by a homogeneous scalar field.
 In this case, the Friedmann equations for a monotonically 
 varying inflaton can be expressed in the form \cite{brane6} 
 % 
-\begin{eqnarray}
+\begin{align}
 \label{eq:Friedmann-dbiintro}
-3 \Mpl^2 H^2(\varphi ) &=& V(\varphi ) -T(\varphi ) 
+3 \Mpl^2 H^2(\varphi ) &= V(\varphi ) -T(\varphi ) 
 \left[ 1- \sqrt{1+4\Mpl^4T^{-1} H_{,\vp}^2} \right] \,,\\
 \label{eq:phidot-useful}
-\dot{\varphi} &=& - \frac{2\Mpl^2H_{,\vp}}{\sqrt{1+4\Mpl^4 T^{-1} H_{,\vp}^2}}
+\dot{\varphi} &= - \frac{2\Mpl^2H_{,\vp}}{\sqrt{1+4\Mpl^4 T^{-1} H_{,\vp}^2}}
 \,.
-\end{eqnarray}
+\end{align}
 % 
 
 In Section~\ref{sec:noncanoninfl} we introduced the speed of sound of
@@ -612,7 +612,7 @@ occurred when the brane was located within a
 throat region and moving towards the tip of the throat. 
 We denote the parameter values 
 evaluated during observable inflation by a subscript star
-$(~_*)$. Observable inflation corresponds to no more than about 4 e-foldings  
+$(~_*)$. Observable inflation corresponds to about 4 e-foldings  
 of inflationary expansion, $\Delta \N_* \simeq 4$,
 and occurred somewhere between 30 to 60 e-foldings before the
 end of inflation. 
@@ -625,17 +625,17 @@ will include a third parameter, $s$, which quantifies the rate of change of $c_s
 The inflationary dynamics during this phase can  
 be quantified in terms of these three parameters: 
 % 
-\begin{eqnarray}
+\begin{align}
 \label{eq:epsdefn-dbiintro}
-\varepsilon_H \equiv -\frac{\dot{H}}{H^2}
+\varepsilon_H &\equiv -\frac{\dot{H}}{H^2}
 = \frac{XP_{,X}}{\Mpl^2H^2} 
-= \frac{2\Mpl^2}{\gamma} \left( \frac{H_{,\vp}}{H} \right)^2 \\
+= \frac{2\Mpl^2}{\gamma} \left( \frac{H_{,\vp}}{H} \right)^2 \,,\\
 \label{eq:defeta-dbiintro}
-\eta_H \equiv  \frac{2\Mpl^2}{\gamma}\frac{H_{,\vp\vp}}{H} \\
+\eta_H &\equiv  \frac{2\Mpl^2}{\gamma}\frac{H_{,\vp\vp}}{H} \,,\\
 \label{eq:defs-dbiintro}
-s \equiv \frac{\dot{c_s}}{c_sH} 
+s &\equiv \frac{\dot{c_s}}{c_sH} 
 = \frac{2\Mpl^2}{\gamma} \frac{H_{,\vp}}{H}\frac{\gamma_{,\vp}}{\gamma}  \,,
-\end{eqnarray}
+\end{align}
 % 
 where $\gamma \equiv 1/c_s$. 
 We will assume that the quasi-de Sitter conditions 
